<?xml version="1.0" encoding="utf-8"?>

<!-- The navigation drawer -->
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/drawer_contents"
    style="@style/DrawerItemLayout"
    android:showDividers="beginning|middle"
    android:orientation="vertical"
    android:layout_width="@dimen/drawer_total_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/drawer_background"
    >

    <LinearLayout android:id="@+id/drawer_favs_layout"
                  style="@style/DrawerItemLayout"
        >

        <ImageView android:id="@+id/drawer_favs_image"
            android:src="@drawable/star_solid"
            style="@style/DrawerImageItem"
            />

        <TextView android:id="@+id/drawer_favs"
            android:text="@string/favourites"
            style="@style/DrawerTextItem"
            />
    </LinearLayout>

    <LinearLayout android:id="@+id/drawer_all_layout"
                  style="@style/DrawerItemLayout"
        >

        <ImageView android:id="@+id/drawer_all_image"
            android:src="@drawable/aust_outline"
            style="@style/DrawerImageItem"/>

        <TextView android:id="@+id/drawer_allStations"
            android:text="@string/all"
            style="@style/DrawerTextItem"
            />
    </LinearLayout>

    <LinearLayout android:id="@+id/drawer_states_layout"
                  style="@style/DrawerItemLayout"
        >

        <ImageView android:id="@+id/drawer_states_image"
            android:src="@drawable/down_arrow"
            style="@style/DrawerImageItem"
            />

        <TextView android:id="@+id/drawer_states"
            android:text="@string/states"
            style="@style/DrawerTextItem"
            />
    </LinearLayout>


    <ListView android:id="@+id/drawer_states_list"
        style="@style/DrawerItemLayout"
        android:layout_height="match_parent"

        tools:listitem="@layout/drawer_list_item"
        />

</LinearLayout>