<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feer.windcast.WeatherStationFragment">

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <EditText android:id="@+id/weather_station_search_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weather_station_search_text"
            android:inputType="textNoSuggestions|textFilter"
            android:visibility="gone"
            android:imeOptions="actionDone"
            />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_stationList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/weather_station_list_item"
                android:fastScrollEnabled="true"
                android:smoothScrollbar="true"
                android:visibility="gone"
                />
        </android.support.v4.widget.SwipeRefreshLayout>

        <include layout="@layout/empty_station_list" />
    </LinearLayout>
    
    <ProgressBar android:id="@+id/loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="visible"
        android:layout_gravity="center"
    />

</FrameLayout>