...
        android:layout_alignParentStart="true"

        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        />

    <TextView  android:id="@+id/station_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weather Station A"
      
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_vertical"
...
